--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -6,7 +6,7 @@
 
   = link_to "Edit", edit_bookmark_path(@bookmark), class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500"
 
-.flex.flex-col.justify-between.lg:flex-row
+.flex.flex-col.justify-between.lg:flex-row.px-4.sm:px-0
   .w-full.flex.flex-col.lg:mr-2.sm:mb-2
     = link_to @bookmark.uri.to_s, @bookmark.uri.to_s
     = render RelativeTimeComponent.new(time: @bookmark.created_at)
