--- a/app/views/errors/internal_server_error.html.haml
+++ b/app/views/errors/internal_server_error.html.haml
@@ -1,9 +1,6 @@
 - content_for :page_title do
   500 - INTERNAL SERVER ERROR
 
-.ui.stackable.center.aligned.grid
-  .ui.middle.aligned.row
-    .six.wide.column
-      %h1.ui.header Thaaaaats not gone well
-      %p This is a 500 - Internal Server Error which usually means shits gone terribly wrong. The poor hampster running the server probably had a heart attack or something.
-      %p An error report was automatically generated, but if the problem persists please contact support.
+%h1 Thaaaaats not gone well
+%p This is a 500 - Internal Server Error which usually means shits gone terribly wrong. The poor hampster running the server probably had a heart attack or something.
+%p An error report was automatically generated, but if the problem persists please contact support.
