--- a/app/components/stats_component/stats_component.html.haml
+++ b/app/components/stats_component/stats_component.html.haml
@@ -1,6 +1,7 @@
-.px-4.sm:px-0
-  %h3.text-lg.leading-6.font-medium.text-gray-900
-    = @title
+- if @title
+  .px-4.sm:px-0
+    %h3.text-lg.leading-6.font-medium.text-gray-900
+      = @title
 
 %div
   %dl.mt-5.grid.grid-cols-1.rounded.bg-white.overflow-hidden.shadow.divide-y.divide-gray-200.md:grid-cols-3.md:divide-y-0.md:divide-x
