--- a/app/views/layouts/page.html.haml
+++ b/app/views/layouts/page.html.haml
@@ -7,102 +7,10 @@
       = stylesheet_pack_tag "application", media: "all", "data-turbolinks-track": "reload"
       = javascript_pack_tag "application", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
 
-  %body{ class: [  controller_name, action_name, "bg-gray-50" ] }
+  %body.bg-gray-200.flex.flex-col.min-h-screen{ class: [  controller_name, action_name ] }
     %div
       .bg-gray-800.pb-32
-        %nav.bg-gray-800
-          .max-w-7xl.mx-auto.sm:px-6.lg:px-8
-            .border-b.border-gray-700
-              .flex.items-center.justify-between.h-16.px-4.sm:px-0
-                .flex.items-center
-                  .flex-shrink-0
-                    = image_tag "bug_logo.png", class: "h-8 w-8", alt: "transient bug"
-                    
-                  .hidden.md:block
-                    .ml-10.flex.items-baseline.space-x-4
-                      / Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white"
-                      %a.bg-gray-900.text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Dashboard
-                      %a.text-gray-300.hover:bg-gray-700.hover:text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Team
-                      %a.text-gray-300.hover:bg-gray-700.hover:text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Projects
-                      %a.text-gray-300.hover:bg-gray-700.hover:text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Calendar
-                      %a.text-gray-300.hover:bg-gray-700.hover:text-white.px-3.py-2.rounded-md.text-sm.font-medium{:href => "#"} Reports
-
-                .hidden.md:block
-                  .ml-4.flex.items-center.md:ml-6
-                    %button.bg-gray-800.p-1.text-gray-400.rounded-full.hover:text-white.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white
-                      %span.sr-only View notifications
-                      / Heroicon name: bell
-                      %svg.h-6.w-6{"aria-hidden" => "true", :fill => "none", :stroke => "currentColor", :viewbox => "0 0 24 24", :xmlns => "http://www.w3.org/2000/svg"}
-                        %path{:d => "M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9", "stroke-linecap" => "round", "stroke-linejoin" => "round", "stroke-width" => "2"}
-
-                    / Profile dropdown
-                    .ml-3.relative
-                      %div
-                        %button#user-menu.max-w-xs.bg-gray-800.rounded-full.flex.items-center.text-sm.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white{"aria-haspopup" => "true"}
-                          %span.sr-only Open user menu
-                          %img.h-8.w-8.rounded-full{:alt => "", :src => "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"}/
-                      /
-                        Profile dropdown panel, show/hide based on dropdown state.
-                        
-                        Entering: "transition ease-out duration-100"
-                        From: "transform opacity-0 scale-95"
-                        To: "transform opacity-100 scale-100"
-                        Leaving: "transition ease-in duration-75"
-                        From: "transform opacity-100 scale-100"
-                        To: "transform opacity-0 scale-95"
-                      .origin-top-right.absolute.right-0.mt-2.w-48.rounded-md.shadow-lg.py-1.bg-white.ring-1.ring-black.ring-opacity-5{"aria-labelledby" => "user-menu", "aria-orientation" => "vertical", :role => "menu"}
-                        %a.block.px-4.py-2.text-sm.text-gray-700.hover:bg-gray-100{:href => "#", :role => "menuitem"} Your Profile
-                        %a.block.px-4.py-2.text-sm.text-gray-700.hover:bg-gray-100{:href => "#", :role => "menuitem"} Settings
-                        %a.block.px-4.py-2.text-sm.text-gray-700.hover:bg-gray-100{:href => "#", :role => "menuitem"} Sign out
-
-                .-mr-2.flex.md:hidden
-                  / Mobile menu button
-                  %button.bg-gray-800.inline-flex.items-center.justify-center.p-2.rounded-md.text-gray-400.hover:text-white.hover:bg-gray-700.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white
-                    %span.sr-only Open main menu
-                    /
-                      Heroicon name: menu
-                      
-                      Menu open: "hidden", Menu closed: "block"
-                    %svg.block.h-6.w-6{"aria-hidden" => "true", :fill => "none", :stroke => "currentColor", :viewbox => "0 0 24 24", :xmlns => "http://www.w3.org/2000/svg"}
-                      %path{:d => "M4 6h16M4 12h16M4 18h16", "stroke-linecap" => "round", "stroke-linejoin" => "round", "stroke-width" => "2"}
-                    /
-                      Heroicon name: x
-                      
-                      Menu open: "block", Menu closed: "hidden"
-                    %svg.hidden.h-6.w-6{"aria-hidden" => "true", :fill => "none", :stroke => "currentColor", :viewbox => "0 0 24 24", :xmlns => "http://www.w3.org/2000/svg"}
-                      %path{:d => "M6 18L18 6M6 6l12 12", "stroke-linecap" => "round", "stroke-linejoin" => "round", "stroke-width" => "2"}
-          /
-            Mobile menu, toggle classes based on menu state.
-            
-            Open: "block", closed: "hidden"
-          .hidden.border-b.border-gray-700.md:hidden
-            .px-2.py-3.space-y-1.sm:px-3
-              / Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white"
-              %a.bg-gray-900.text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Dashboard
-              %a.text-gray-300.hover:bg-gray-700.hover:text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Team
-              %a.text-gray-300.hover:bg-gray-700.hover:text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Projects
-              %a.text-gray-300.hover:bg-gray-700.hover:text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Calendar
-              %a.text-gray-300.hover:bg-gray-700.hover:text-white.block.px-3.py-2.rounded-md.text-base.font-medium{:href => "#"} Reports
-
-            .pt-4.pb-3.border-t.border-gray-700
-              .flex.items-center.px-5
-                .flex-shrink-0
-                  %img.h-10.w-10.rounded-full{:alt => "", :src => "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"}/
-
-                .ml-3
-                  .text-base.font-medium.leading-none.text-white Tom Cook
-                  .text-sm.font-medium.leading-none.text-gray-400 tom@example.com
-
-                %button.ml-auto.bg-gray-800.flex-shrink-0.p-1.text-gray-400.rounded-full.hover:text-white.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white
-                  %span.sr-only View notifications
-                  / Heroicon name: bell
-                  %svg.h-6.w-6{"aria-hidden" => "true", :fill => "none", :stroke => "currentColor", :viewbox => "0 0 24 24", :xmlns => "http://www.w3.org/2000/svg"}
-                    %path{:d => "M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9", "stroke-linecap" => "round", "stroke-linejoin" => "round", "stroke-width" => "2"}
-
-              .mt-3.px-2.space-y-1
-                %a.block.px-3.py-2.rounded-md.text-base.font-medium.text-gray-400.hover:text-white.hover:bg-gray-700{:href => "#"} Your Profile
-                %a.block.px-3.py-2.rounded-md.text-base.font-medium.text-gray-400.hover:text-white.hover:bg-gray-700{:href => "#"} Settings
-                %a.block.px-3.py-2.rounded-md.text-base.font-medium.text-gray-400.hover:text-white.hover:bg-gray-700{:href => "#"} Sign out
+        = render "layouts/common/navbar"
 
         %header.py-10
           .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
